# AI-CLI-

./: .env  .env.example  .gitignore  README.md  ai_engine.py  build.bat  build.sh  command_parser.py  config.py  executor.py  gui.py  gui_entry.py  intent_recognizer.py  logger.py  main.py  pull_from_github.bat  push_to_github.bat  pyproject.toml  requirements.txt  setup.bat  user_config.py
package_config/: ai_cli_cli.spec  ai_cli_gui.spec  ai_cli_gui_mac.spec
scripts/: pull_from_github.bat  push_to_github.bat  setup.bat
